--- a/requirements.txt
+++ b/requirements.txt
@@ -1,208 +1,32 @@
-absl-py==1.0.0
-aiohttp==3.8.1
-aiohttp-cors==0.7.0
-aioredis==1.3.1
-aiosignal==1.2.0
-anyio==3.5.0
-appdirs==1.4.4
-arrow==1.2.2
-asgiref==3.5.0
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==21.4.0
-bcrypt==3.2.0
-blessed==1.20.0
-blessings==1.7
-boto3==1.21.10
-botocore==1.24.10
-bravado==11.0.3
-bravado-core==5.17.0
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-chex==0.1.3
-click==7.1.2
-cloudpickle==2.0.0
-colorama==0.4.4
-colorful==0.5.4
-cryptography==36.0.1
-datasets==2.15.0
-Deprecated==1.2.13
+aiohttp==3.9.1
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.2.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+datasets==2.16.1
 dill==0.3.7
-dm-haiku==0.0.6
-dm-tree==0.1.6
-docker==5.0.3
-docker-pycreds==0.4.0
-einops==0.3.2
-etils==1.3.0
-exceptiongroup==1.1.3
-fabric==2.6.0
-fastapi==0.74.1
-filelock==3.6.0
-Flask==1.1.4
-flatbuffers==1.12
-fqdn==1.5.1
-frozenlist==1.3.0
+filelock==3.13.1
+frozenlist==1.4.1
 fsspec==2023.10.0
-ftfy==6.1.1
-func-timeout==4.3.5
-future==0.18.2
-gast==0.5.3
-gin-config==0.5.0
-gitdb==4.0.9
-GitPython==3.1.27
-google-api-core==1.31.5
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-cloud==0.34.0
-google-cloud-core==1.7.2
-google-cloud-storage==1.36.2
-google-crc32c==1.3.0
-google-pasta==0.2.0
-google-resumable-media==1.3.3
-googleapis-common-protos==1.55.0
-gpustat==0.6.0
-grpcio==1.44.0
-h11==0.13.0
-h5py==3.6.0
-hiredis==2.0.0
-huggingface-hub==0.19.4
-idna==3.3
-importlib-metadata==4.11.2
-importlib-resources==5.4.0
-invoke==1.6.0
-isoduration==20.11.0
-itsdangerous==1.1.0
-jax==0.3.14
-jaxlib==0.3.14
-Jinja2==2.11.3
-jmespath==0.10.0
-jmp==0.0.2
-joblib==1.1.0
-jsonlines==3.0.0
-jsonpointer==2.2
-jsonref==0.2
-jsonschema==4.4.0
-jsonschema-specifications==2023.11.1
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-kubernetes==23.3.0
-libclang==13.0.0
-libtpu-nightly==0.1.dev20220627
-lm-dataformat==0.0.20
-Markdown==3.3.6
-MarkupSafe==2.1.0
-monotonic==1.6
-mpmath==1.3.0
-mrunner @ git+https://gitlab.com/awarelab/mrunner.git@dddebfe96163506852ea690bef6ed3e92c032933
-msgpack==1.0.3
-multidict==6.0.2
+huggingface-hub==0.20.1
+idna==3.6
+multidict==6.0.4
 multiprocess==0.70.15
-munch==2.5.0
-neptune-client==0.14.3
-networkx==3.1
-numpy==1.22.2
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-ml-py==12.535.133
-nvidia-ml-py3==7.352.0
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.0
-onnx==1.11.0
-onnxconverter-common==1.9.0
-opencensus==0.8.0
-opencensus-context==0.1.2
-opt-einsum==3.3.0
-optax==0.0.6
-packaging==21.3
-pandas==1.4.1
-paramiko==2.9.2
-path==16.4.0
-path.py==12.5.0
-pathlib2==2.3.7.post1
-pathy==0.10.3
-Pillow==9.0.1
-pkgutil_resolve_name==1.3.10
-prometheus-client==0.13.1
-protobuf==3.19.4
-psutil==5.9.0
-py-spy==0.3.11
-pyarrow==14.0.1
+numpy==1.24.4
+packaging==23.2
+pandas==2.0.3
+pyarrow==14.0.2
 pyarrow-hotfix==0.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydantic==1.9.0
-PyJWT==2.3.0
-PyNaCl==1.5.0
-pyparsing==3.0.7
-pyperclip==1.8.2
-pyrsistent==0.18.1
 python-dateutil==2.8.2
-pytz==2021.3
-PyYAML==6.0
-ray==1.5.1
-redis==4.1.4
-referencing==0.31.0
-regex==2022.3.2
-requests==2.27.1
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3987==1.3.8
-rpds-py==0.13.0
-rsa==4.8
-s3transfer==0.5.2
-sacremoses==0.0.47
-scipy==1.8.0
-sentry-sdk==1.9.0
-setproctitle==1.3.3
-simplejson==3.17.6
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
 six==1.16.0
-smart-open==5.2.1
-smmap==5.0.0
-sniffio==1.2.0
-starlette==0.17.1
-swagger-spec-validator==2.7.4
-sympy==1.12
-tabulate==0.8.9
-TatSu==5.5.0
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-cpu==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
-termcolor==1.1.0
-tf-estimator-nightly==2.8.0.dev2021122109
-tf2onnx==1.9.3
-tokenizers==0.11.6
-toolz==0.11.2
-torch==2.1.1
 tqdm==4.66.1
-transformers==4.16.2
-triton==2.1.0
-typer==0.9.0
-typing_extensions==4.1.1
-ujson==5.1.0
-uri-template==1.1.0
-urllib3==1.26.8
-uvicorn==0.17.5
-wandb==0.16.0
-wcwidth==0.2.5
-webcolors==1.11.1
-websocket-client==1.3.1
-Werkzeug==1.0.1
-wrapt==1.13.3
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.1.0
 xxhash==3.4.1
-yarl==1.7.2
-zipp==3.7.0
-zstandard==0.17.0
+yarl==1.9.4
+zstandard==0.22.0
